log
Mon 26 Sep 2022 01:08:50 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
4cfd3bc
Mon 26 Sep 2022 01:23:09 AM UTC: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|0
30f8509
Mon 26 Sep 2022 01:28:13 AM UTC: 
 treemap.c | 103 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 100 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:132:1: error: control reaches end of non-void function [-Werror=return-type]
  132 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
de59d2b
Mon 26 Sep 2022 01:37:07 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
6e5412d
Mon 26 Sep 2022 01:37:50 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:130:1: error: control reaches end of non-void function [-Werror=return-type]
  130 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3a73216
Mon 26 Sep 2022 01:40:43 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c:101:3: error: expected identifier or ‘(’ before ‘else’
  101 |   else {
      |   ^~~~
treemap.c:107:1: error: expected identifier or ‘(’ before ‘}’ token
  107 | }
      | ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:131:1: error: control reaches end of non-void function [-Werror=return-type]
  131 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3daa52f
Mon 26 Sep 2022 01:41:16 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:100:3: error: ‘else’ without a previous ‘if’
  100 |   else {
      |   ^~~~
treemap.c: In function ‘searchTreeMap’:
treemap.c:130:1: error: control reaches end of non-void function [-Werror=return-type]
  130 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
05c49f9
Mon 26 Sep 2022 01:44:00 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:130:1: error: control reaches end of non-void function [-Werror=return-type]
  130 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fcdda11
Mon 26 Sep 2022 01:45:05 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:130:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  130 |   return aux;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
afb689e
Mon 26 Sep 2022 01:45:54 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9af1670
Mon 26 Sep 2022 01:49:15 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
fda1bd5
Mon 26 Sep 2022 01:53:49 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  29|0
total_score: 70/70
28f43ec
